--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "vite-template-solid",
   "version": "0.0.0",
   "description": "",
+  "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "fetch-data": "node fetch-data"
   },
   "license": "MIT",
   "devDependencies": {
@@ -18,6 +20,8 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "csvjson-csv2json": "^5.0.6",
+    "node-fetch": "^3.2.4",
     "solid-app-router": "^0.3.3",
     "solid-js": "^1.3.13"
   }
