--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.2",
     "csvjson-csv2json": "^5.0.6",
     "node-fetch": "^3.2.4",
     "solid-app-router": "^0.3.3",
