--- a/package.json
+++ b/package.json
@@ -2,27 +2,32 @@
   "name": "vite-template-solid",
   "version": "0.0.0",
   "description": "",
+  "homepage": "https://m-bt.github.io/trial-of-valor",
   "type": "module",
   "scripts": {
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "fetch-data": "node fetch-data"
+    "fetch-data": "node fetch-data",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.7",
+    "csvjson-csv2json": "^5.0.6",
+    "gh-pages": "^4.0.0",
+    "node-fetch": "^3.2.4",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24",
     "vite": "^2.8.6",
+    "vite-plugin-singlefile": "^0.9.0",
     "vite-plugin-solid": "^2.2.6"
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.2",
-    "csvjson-csv2json": "^5.0.6",
-    "node-fetch": "^3.2.4",
     "solid-app-router": "^0.3.3",
     "solid-js": "^1.3.13"
   }
